# ET21-Frackstock-FW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cc1101.h  ccpacket.h  device.h  frackstock.h  gpio.h  imu.h  interrupts.h  led_ring.h  main.h  radio.h  serial.h
source/: cc1101.cpp  device.cpp  frackstock.cpp  gpio.cpp  imu.cpp  interrupts.cpp  led_ring.cpp  main.cpp  radio.cpp  serial.cpp
tools/: auto-flash.py  config.html  configurator.py  device_list.csv  flashtool.py  index.html  testing.py
